# dxsp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/: .pre-commit-config.yaml  .readthedocs.yaml  dependabot.yml  emoji.yml  mergify.yml  renovate.json  semantic.yml  settings.yml
.github/workflows/: emojify.yml  python-publish.yml  release.yml  ☁️deploy.yml  ✨Flow.yml  🐍Build.yml  🐍build.yml  👷Flow.yml  📦release.yml  📦release.yml.archive  🔏Security.yml  🧰draft_release.yml  🧹BranchCleanUp.yml  🧹cleanup.yml  🧼CodeCheck.yml
.github/workflows/archive/: ☁️deploy.yml  🐍Build.yml  🐳Docker.yml  🔏Security.yml
.registry/: Dockerfile
.requirements/: requirements.txt
definitely/: main.py
docs/: .readthedocs.yaml  01_start.rst  02_config.rst  03_module.rst  conf.py  dxsp.rst  index.rst  modules.rst
docs/_build/.doctrees/source/: index.doctree
docs/_static/: custom.css
docs/source/: conf.py
docs/source/_build/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/source/_build/.doctrees/: environment.pickle  index.doctree
docs/source/_build/_sources/: index.rst.txt
dsh/: __init__.py
dxsp/: .gitignore  __init__.py  account_utils.py  config.py  constants.py  contract_utils.py  core.toml  default_settings.toml  main.py  utils.py
dxsp/assets/: blockchains.py  chainIds.json  exchanges.json  exchanges.py
dxsp/handler/: __init__.py  _client.py  client.py  kwenta.py  oneinch.py  uniswap.py  zerox.py
dxsp/protocol/: __init__.py  client.py  kwenta.py  oneinch.py  uniswap.py  zerox.py
dxsp/protocols/: __init__.py  client.py  evm.py  kwenta.py  oneinch.py  protocol.py  uniswap.py  uniswap_v2.py  uniswap_v3.py  zerox.py
dxsp/utils/: __init__.py  account_utils.py  contract_utils.py  explorer_utils.py  instrument_utils.py  token_utils.py  utils.py
examples/: Dockerfile  blockapi.py  example.py  requirements.txt
swaportunity/: __init__.py  manyabi
swapportunity/: main.py  manyabi.py
swapportunity/assets/: allChainIds.json
tests/: test_chain_5.py  test_chain_56.py  test_protocol_uniswap.py  test_protocol_uniswapV2.py  test_protocol_uniswapv3.py  test_protocol_zerox.py  test_unit.py  test_unit_client.py  test_unit_dexswap.py  test_unit_exception.py  test_unit_exception_old  test_unit_kwenta.py  test_unit_uniswap.py  test_unit_uniswap_v3.py  test_unit_utils.py  test_unit_w3.py  test_unit_zerox.py  test_utils_account.py  test_utils_contract.py  test_utils_explorer.py  test_web3.py
tests/archive/: chain_5.py  chain_56.py  oldtest_utils_account.py  oldtest_utils_contract.py  test_unit_kwenta.py  w3.py
