
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dxsp"
version = "4.2.6"
description = "DXSP (DeX SwaP), A defi swap helper package. Swap made easy."
authors = ["mraniki <8766259+mraniki@users.noreply.github.com>"]
license = "MIT License"
readme = "README.md"
packages = [
    {include = "dxsp"}
]

[tool.poetry.urls]
"Changelog" =  "https://github.com/mraniki/dxsp/blob/dev/CHANGELOG.rst"
"Support" =  "https://github.com/mraniki/dxsp/discussions"
"Issues" =  "https://github.com/mraniki/dxsp/issues"

[tool.poetry.dependencies]
python = "^3.10"
dynaconf = "^3.1.12"
loguru = "^0.7.0"
web3 = "^6.4.0"
pycoingecko = "^3.1.0"
uniswap-python = "^0.7.0"

[tool.poetry.group.dev.dependencies]
python-semantic-release = "^8.0.2"
ruff = "^0.0.280"
  
[tool.ruff]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
]
exclude = [
  ".github/*",
  "docs/*",
]
ignore = ["F401"]
format = "github"
fixable = ["ALL"]











[tool.poetry.group.test.dependencies]
pytest = "^7.0"
pytest-cov = "^4.1"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.11.1"
pytest-loguru = "^0.2.0"
eth_tester = "^0.9.0b2"

[tool.pytest.ini_options]
pythonpath = "."
testpaths = "tests"
python_classes = "Test*"
log_format = "%(asctime)s - %(levelname)s - %(name)s - %(message)s"
log_level = "DEBUG"

[tool.coverage.run]
omit = [
    "tests/*",
    "examples/*",
    "docs/*",
    "*/config.py"
]










[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = ">=5,<6"
sphinx_bootstrap_theme = "^0.8.1"
sphinxext-remoteliteralinclude = "^0.4.0"





# [tool.semantic_release]
# version_variable = ["pyproject.toml:version","dxsp/__init__.py:__version__"]
# branch = "main"
# upload_to_pypi = true
# upload_to_release = true
# build_command = "pip install poetry && poetry build"
# commit_parser = "semantic_release.history.emoji_parser"
# use_textual_changelog_sections = true
# major_emoji = "BREAKING,ðŸ’¥,:boom:"
# minor_emoji = "feat,ðŸ¥š,:egg:,ðŸš€,:rocket:,ðŸ’„,:lipstick:,âœ¨,:sparkles:"
# patch_emoji = "fix,bump,Update,ðŸŽ¨,:art:,ðŸ›,:bug:,ðŸš‘,:ambulance:,âš¡,:zap:,ðŸ”¥,:fire:,ðŸš¨,:rotating_light:,â™»ï¸,:recycle:,ðŸ”§,:wrench:,â¬†ï¸,:arrow_up:,ðŸ©¹,:adhesive_bandage:,ðŸ‘·,:construction_worker:,ðŸ“,:memo:,ðŸ”’,:lock:,ðŸ‘½,:alien:,ðŸ’¬,:speech_balloon:,ðŸ¥…,:goal_net:,âœ…,:white_check_mark:,ðŸ³,:whale:,ðŸ™ˆ,:see_no_evil:,âš—ï¸,:alembic:,ðŸ§,:monocle_face:,ðŸ”‡,:mute:,ðŸ”Š:volume:"

[tool.semantic_release]
tag_format = "v{version}"
commit_parser = "emoji"
build_command = "pip install poetry && poetry build"
version_variable = [
    "dxsp/__init__.py:__version__",
    # "docs/conf.py:version",
]
version_toml = [
   "pyproject.toml:tool.poetry.version",
]

[tool.semantic_release.commit_parser_options]
major_tags = [
    "BREAKING",
    "ðŸ’¥",
    ":boom:",
  ]
minor_tags = ["feat",
    "ðŸ¥š",":egg:",
    "ðŸš€",":rocket:",
    "ðŸ’„",":lipstick:",
    "âœ¨",":sparkles:",
]

patch_tags = ["fix","bump","Update",
    "ðŸŽ¨",":art:",
    "ðŸ›",":bug:",
    "ðŸš‘",":ambulance:",
    "âš¡",":zap:",
    "ðŸ”¥",":fire:",
    "ðŸš¨",":rotating_light:",
    "â™»ï¸",":recycle:",
    "ðŸ”§",":wrench:",
    "â¬†ï¸",":arrow_up:",
    "ðŸ©¹",":adhesive_bandage:",
    "ðŸ‘·",":construction_worker:",
    "ðŸ“",":memo:",
    "ðŸ”’",":lock:",
    "ðŸ‘½",":alien:",
    "ðŸ’¬",":speech_balloon:",
    "ðŸ¥…",":goal_net:",
    "âœ…",":white_check_mark:",
    "ðŸ³",":whale:",
    "ðŸ™ˆ",":see_no_evil:",
    "âš—ï¸",":alembic:",
    "ðŸ§",":monocle_face:",
    "ðŸ”‡",":mute:",
    "ðŸ”Š",":volume:",
]

[tool.semantic_release.changelog]
# template_dir = "templates"
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true

