[metadata]
name = dxsp
version = attr: dxsp.__version__
author = MrAniki
url = https://github.com/mraniki/dxsp
description = DXSP (DeX SwaP), A defi swap helper package. Easy peasy Swap.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = defi, swap
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
install_requires =
    web3
    pycoingecko
    dotenv
    asyncio
    many_abis